# erris

./: Cargo.toml  README.md
instructions/: prompts
src/: error.rs  lib.rs  main.rs
src/ais/: mod.rs
src/ais/asst/: mod.rs
src/ais/msg/: mod.rs
src/cli/: mod.rs
src/env/: mod.rs
src/utils/: configs.rs  constants.rs  file.rs  mod.rs
