[package]
name = "buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
# unused = "allow"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = "0.18"
# -- D/Serialize
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# --Cli
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"
# --Files
walkdir = "2"
globset = "0.4"
# --Others
derive_more = { version = "0.99.17", features = ["from", "display", "deref"] }