[package]
name = "bud"
version = "0.1.0"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bud"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = "0.18"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"
walkdir = "2"
globset = "0.4"
derive_more = { version = "0.99.17", features = ["from", "display", "deref"] }
dotenv = "0.15.0"
